   data files a relative path which broke the "batch processing" dialog becuase
   the ui.glade file couldn't be found anymore.
 * Changed man page builder script to delete build directory on clean up.
   Otherwise it might happen that the directory belongs to root once the
   application was installed system-wide via the setup script.


2008-09-28  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Fixed bug of missing translations under MS Windows.
 * While at it made helper scripts use program name and version definitions
   of const module instead of literals. (Finaly)
 * Maybe introduced a new bug: Creation of man pages doesn't work anymore.


2008-09-25  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Completly reimplemented batch processing algorithm. Now it is possible
   to prevent splitting of registrations with common suffix.


2008-08-30  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Added exception hook which shows uncatched exceptions in a dialog.


2008-08-29  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Finished setlist export and printing.


2008-08-25  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Object-oriented redesign of export algorithm. (No printing yet)
 * stripName method for all ModelSpecific sub-classes. Strips file extionsions
   and other non-name data (like icons) from name strings.


2008-08-24  Dennis Schulmeister  <dennis -at- ncc-1701a.homelinux.net>

 * Added support for YAMAHA PSR-S700.
 * Refactored MainWindow class. Tab-classes do now create their widgets
   on their own. The MainWindow object doesn't hold a reference to the tab's
   widgets anymore.
 * Splited credits string so that translation works.
 * Implemented paragmatic prevention of renaming a dummy entry (### EMPTY ###)
   for import tab.
 * Implemented "Quick Rename" tab.
 * Partialy implemented "Print setlist" tab.
 * Prepared batch dialog for grouping registrations which go together.

